feat: simplificando complexidade do algorítmo